--- a/main.html
+++ b/main.html
@@ -1,75 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Responsive Footer</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+
+  <body>
     <footer>
-        <div class="footer-container">
-            <!-- Home Section -->
-            <div class="footer-section">
-                <h3>Home</h3>
-                <ul>
-                    <li><a href="#">Homepage</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Careers</a></li>
-                </ul>
-            </div>
-
-            <!-- About Section -->
-            <div class="footer-section">
-                <h3>About</h3>
-                <p>We are a leading company providing web design, SEO, and marketing services. Our mission is to empower businesses with the tools they need to thrive online.</p>
-            </div>
-
-            <!-- Links Section -->
-            <div class="footer-section">
-                <h3>Links</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-
-            <!-- Services Section -->
-            <div class="footer-section">
-                <h3>Services</h3>
-                <ul>
-                    <li><a href="#">App Design</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">SEO Services</a></li>
-                    <li><a href="#">Content Marketing</a></li>
-                </ul>
-            </div>
-
-            <!-- Contact Section -->
-            <div class="footer-section">
-                <h3>Contact</h3>
-                <p>Phone: +91 8879887262</p>
-                <p>Email: <a href="mailto:contact@company.com">contact@company.com</a></p>
-            </div>
+      <div class="content">
+        <div class="top">
+          <div class="logo-details">
+            <span class="logo_name">company</span>
+          </div>
+          <div class="media-icons">
+            <!-- your code here -->
+				  <a href="#"><i class="fa fa-facebook"></i></a>
+			      <a href="#"><i class="fa fa-instagram"></i></a>
+			      <a href="#"><i class="fa fa-twitter"></i></a>
+			      <a href="#"><i class="fa fa-youtube"></i></a>
+			      <a href="#"><i class="fa fa-whatsapp"></i></a>
+          </div>
         </div>
-
-        <!-- Social Media Icons -->
-        <div class="footer-social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+        <div class="link-boxes">
+          <!-- your code here -->
+			<h3>Home</h3>
+			<ul>
+				<li><a href="#">Home</a></li>
+			</ul>
+			<h3>About</h3>
+			<ul>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Our Team</a></li>
+			</ul>
+			<h3>Links</h3>
+			<ul>
+				<li><a href="#">About page</a></li>
+				<li><a href="#">Homepage</a></li>
+				<li><a href="#">Degitalpage</a></li>
+			</ul>
+			<h3>Services</h3>
+			<ul>
+				<li><a href="#">About page</a></li>
+				<li><a href="#">Homepage</a></li>
+				<li><a href="#">Degitalpage</a></li>
+			</ul>
+			<h3>Contact</h3>
+			<ul>
+				<li><a href="#">8879887262</li>
+			</ul>
         </div>
-
-        <!-- Footer Bottom -->
-        <div class="footer-bottom">
-            <p>&copy; 2024 Company. All rights reserved.</p>
-        </div>
+      </div>
+      <div class="bottom-details">
+        <!-- your code here -->
+		  <a href="#">privacy policy</a>	
+		  
+      </div>
     </footer>
-</body>
+  </body>
 </html>
